--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 black==25.1.0
 blinker==1.9.0
+cachelib==0.13.0
 click==8.2.1
 dotenv==0.9.9
 Flask==3.1.1
+Flask-Session==0.8.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+msgspec==0.19.0
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
