--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 black==25.1.0
 blinker==1.9.0
 cachelib==0.13.0
+cffi==1.17.1
 click==8.2.1
+cryptography==45.0.6
 dotenv==0.9.9
 Flask==3.1.1
 Flask-Session==0.8.0
@@ -13,6 +15,7 @@ mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+pycparser==2.22
 pyodbc==5.2.0
 python-dotenv==1.1.1
 Werkzeug==3.1.3
