--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==45.0.6
 dotenv==0.9.9
 Flask==3.1.1
 Flask-Session==0.8.0
+Flask-WTF==1.2.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -19,3 +20,4 @@ pycparser==2.22
 pyodbc==5.2.0
 python-dotenv==1.1.1
 Werkzeug==3.1.3
+WTForms==3.2.1
