--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dotenv==0.9.9
 Flask==3.1.1
 Flask-Session==0.8.0
 Flask-WTF==1.2.2
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -16,8 +17,12 @@ mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+pluggy==1.6.0
 pycparser==2.22
+Pygments==2.19.2
 pyodbc==5.2.0
+pytest==8.4.1
+pytest-flask==1.3.0
 python-dotenv==1.1.1
 Werkzeug==3.1.3
 WTForms==3.2.1
