--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.9.0
 cachelib==0.13.0
 cffi==1.17.1
 click==8.2.1
+coverage==7.10.2
 cryptography==45.0.6
 dotenv==0.9.9
 Flask==3.1.1
@@ -20,9 +21,13 @@ platformdirs==4.3.8
 pluggy==1.6.0
 pycparser==2.22
 Pygments==2.19.2
+pylibmc==1.6.3
 pyodbc==5.2.0
 pytest==8.4.1
+pytest-cov==6.2.1
 pytest-flask==1.3.0
 python-dotenv==1.1.1
+setuptools==80.9.0
 Werkzeug==3.1.3
+wheel==0.45.1
 WTForms==3.2.1
