--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==8.4.1
 pytest-cov==6.2.1
 pytest-flask==1.3.0
 python-dotenv==1.1.1
+redis==6.4.0
 setuptools==80.9.0
 Werkzeug==3.1.3
 wheel==0.45.1
