trying to fix docs navbar

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,8 @@ baseurl: "/aiddb-website"
 url: "https://cday960.github.io"
 
 remote_theme: just-the-docs/just-the-docs
+plugins:
+  - jekyll-remote-theme
 
 color_scheme: dark
 
